--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "aframe-example-component",
+  "name": "aframe-e-component",
   "version": "0.1.0",
-  "description": "Example component for A-Frame.",
+  "description": "Crease component for A-Frame.",
   "main": "index.js",
   "scripts": {
     "build": "browserify examples/main.js -o examples/build.js",
     "dev": "budo examples/main.js:build.js --dir examples --port 8000 --live --open",
-    "dist": "webpack index.js dist/aframe-example-component.js && webpack -p index.js dist/aframe-example-component.min.js",
+    "dist": "webpack index.js dist/aframe-crease-component.js && webpack -p index.js dist/aframe-crease-component.min.js",
     "postpublish": "npm run dist",
     "preghpages": "npm run build && shx rm -rf gh-pages && shx cp -r examples gh-pages",
     "ghpages": "npm run preghpages && ghpages -p gh-pages",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ngokevin/aframe-component-boilerplate.git"
+    "url": "git+https://github.com/andreasplesch/aframe-crease-component.git"
   },
   "keywords": [
     "aframe",
@@ -24,12 +24,12 @@
     "mozvr",
     "webvr"
   ],
-  "author": "Kevin Ngo <me@ngokevin.com>",
+  "author": "Andreas Plesch <andreasplesch@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ngokevin/aframe-component-boilerplate/issues"
+    "url": "https://github.com/andreasplesch/aframe-crease-component/issues"
   },
-  "homepage": "https://github.com/ngokevin/aframe-component-boilerplate#readme",
+  "homepage": "https://github.com/andreasplesch/aframe-crease-component#readme",
   "devDependencies": {
     "aframe": "^0.2.0",
     "browserify": "^13.0.0",
